# dataface

./: .gitignore  .travis.yml  Procfile  README.md  dataface.cabal  index.html  stack.yaml  style.css
Documents/: TODO.md
Documents/Design/: Render Layout.afdesign
Documents/Progress Report/: Progress Report.pages
Documents/Project Report/: Project Report.pages  ProjectReport.md
Proposal/: Proposal.pages
app/: Main.hs
init/: init_db.cypher  init_faces.cypher  init_rootFace.cypher  sample_faces.cypher
src/: Data.hs  Routes.hs  SimpleServer.hs  Type.hs
