name:                dataface
version:             0.1.0.0
synopsis:            Sample Movie Database application with Haskell backend
description:         Please see README.md
homepage:            https://github.com/ThoseGrapefruits/dataface
license:             BSD3
license-file:        LICENSE
author:              Jack Davis, Logan Moore
maintainer:          davis.jack@husky.neu.edu, moore.l@husky.neu.edu
copyright:           Copyright: (c) 2016 Pavel Yakovlev
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleServer
  other-modules:       Data
                     , Routes
                     , Type
  build-depends:       base >= 4.8 && < 5
                     , hasbolt
                     , scotty
                     , wai-extra
                     , resource-pool
                     , transformers
                     , mtl
                     , text
                     , aeson
                     , containers
  default-language:    Haskell2010

executable dataface-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasbolt
                     , dataface
                     , mtl
  default-language:    Haskell2010

test-suite dataface-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dataface
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ThoseGrapefruits/dataface
